<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_sync"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/menu_item_sync"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_new"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/menu_item_new"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/menu_item_search"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/menu_view_in_map"
        android:icon="@drawable/ic_menu_mapmode"
        android:title="@string/menu_item_map"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_menu_sort_alphabetically"
        android:title="@string/menu_item_sort"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_item_settings"
        app:showAsAction="never" />

</menu>