<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="18dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/splash_logo_description"
            android:src="@drawable/splash_logo" />

        <LinearLayout
            android:id="@+id/login_loading"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:tag="Light"
                android:text="@string/login_in_progress"
                android:textColor="#666666"
                android:textSize="16sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_form"
            style="@style/formLogin"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:tag="Thin"
                android:text="@string/welcome_intro"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:tag="Light"
                android:text="@string/app_name"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/txt_serverurl"
                style="@style/editorText"
                android:layout_marginTop="@dimen/login_form_first_edit_margin_top"
                android:hint="@string/federation_account_serverurl_label"
                android:inputType="textUri" />

            <EditText
                android:id="@+id/txt_username"
                style="@style/editorText"
                android:layout_marginTop="10dp"
                android:hint="@string/federation_account_username_label"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/txt_password"
                style="@style/editorText"
                android:layout_marginTop="10dp"
                android:hint="@string/federation_account_password_label"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:text="@string/login" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>