<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_sync"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/menu_item_sync"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/menu_item_search"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/menu_switch_tiles"
        android:icon="@drawable/ic_menu_map_layer"
        android:title="@string/menu_item_switch_tiles"
        app:showAsAction="ifRoom" />

</menu>